# TTTCalculator

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
resources/: vcrt_favicon.jfif
tttcalculator/: riders.py  utils.py
tttcalculator/data/: power_multiplier.csv
tttcalculator/layout/: form.py  options.py  results.py
