[tool.poetry]
name = "tttcalculator"
version = "0.1.0"
description = ""
authors = ["Adam <adh167@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.8"
streamlit = "^1.14.1"
numpy = "^1.23.4"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
autoflake = "^1.7.7"
flake8 = "^5.0.4"
mypy = "^0.991"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
